fixing list view and some spacing issues

--- a/src/content.css
+++ b/src/content.css
@@ -38,13 +38,14 @@
 
 .main-view-box {
   padding: 10px;
+  height: 300px;
   max-height: 300px;
   border: 0px solid;
   border-radius: 0px 0px 15px 15px;
 }
 
 .citation-button-block {
-  max-height: 225px;
+  max-height: 230px;
   overflow-y: scroll;
 }
 
@@ -60,6 +61,10 @@
 }
 
 .timeline-view {
+  height: 275px;
+}
+
+.citation-view {
   height: 275px;
 }
 
